--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -17,4 +17,13 @@
         android:layout_centerInParent="true"
         android:text="@string/button_dismiss" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_snooze"
+        android:id="@+id/buttonSnooze"
+        android:layout_alignTop="@+id/butt_dismiss_alarm"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
 </RelativeLayout>
