--- a/app/src/main/res/layout/activity_input_alarm.xml
+++ b/app/src/main/res/layout/activity_input_alarm.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,21 +10,34 @@
     android:orientation="vertical"
     tools:context="com.kludge.wakemeup.InputAlarm">
 
+
     <TimePicker android:id="@+id/time_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numbersBackgroundColor="@color/colorAccent" />
+        android:timePickerMode="spinner"
+        android:numbersBackgroundColor="@color/colorAccent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"/>
 
-    <EditText android:id="@+id/alarm_name"
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/empty_alarm_field"
-        android:textAlignment="center"/>
+        android:layout_below="@id/time_picker"/>
+    <!--
+     <EditText android:id="@+id/alarm_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="@string/empty_alarm_field"
+      android:textAlignment="center"/>
 
-    <Button android:id="@+id/butt_add_alarm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add/Save"
-        android:onClick="addAlarm"/>
+     <Button android:id="@+id/butt_add_alarm"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Add/Save"
+      android:onClick="addAlarm"/>
+     -->
 
-</LinearLayout>
+
+</RelativeLayout>
