--- a/app/src/main/res/layout/activity_main_alarm.xml
+++ b/app/src/main/res/layout/activity_main_alarm.xml
@@ -12,8 +12,7 @@
 
     <ListView android:id="@+id/list_alarms"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_below="@id/butt_add_alarm"/>
+        android:layout_width="wrap_content" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/float_add_alarm"
