--- a/app/src/main/res/layout/activity_input_alarm.xml
+++ b/app/src/main/res/layout/activity_input_alarm.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,24 +8,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.kludge.wakemeup.InputAlarm">
+    tools:context="com.kludge.wakemeup.InputAlarm"
+    android:weightSum="1">
 
-
-    <TimePicker android:id="@+id/time_picker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:timePickerMode="spinner"
-        android:numbersBackgroundColor="@color/colorAccent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"/>
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/time_picker"/>
     <!--
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"/>
+   </RelativeLayout>
+
      <EditText android:id="@+id/alarm_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -39,5 +36,4 @@
       android:onClick="addAlarm"/>
      -->
 
-
-</RelativeLayout>
+</LinearLayout>
