added notification reminders

--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.kludge.wakemeup.AlarmWake">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context="com.kludge.wakemeup.AlarmWake"
+                android:visibility="visible"
+                android:touchscreenBlocksFocus="false">
 
-    <Button android:id="@+id/butt_dismiss_alarm"
+    <TextClock android:id="@+id/view_alarm_clock"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_alignParentStart="true"
+        android:textAlignment="center"
+        android:textSize="110sp"
+        android:format12Hour="H:mm"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_centerInParent="true"
-        android:text="@string/button_dismiss" />
+        android:layout_alignParentStart="true"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@id/view_alarm_clock">
 
-    <Button
+        <Button android:id="@+id/butt_dismiss_alarm"
+                android:layout_height="match_parent"
+         android:layout_width="wrap_content"
+         android:layout_alignParentStart="true" android:layout_alignParentLeft="true"
+         android:layout_centerInParent="true"
+        android:text="@string/button_dismiss"
+        android:layout_weight="1"/>
+
+     <Button android:id="@+id/butt_snooze_alarm"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="@string/button_snooze"
-        android:id="@+id/buttonSnooze"
         android:layout_alignTop="@+id/butt_dismiss_alarm"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_weight="1"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
