--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -26,7 +26,7 @@
         android:layout_height="100dp"
         android:layout_below="@id/view_alarm_clock">
 
-        <Button android:id="@+id/butt_dismiss_alarm"
+        <Button android:id="@+id/butt_math_game_dismiss"
                 android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:layout_alignParentStart="true" android:layout_alignParentLeft="true"
@@ -44,5 +44,14 @@
         android:layout_weight="1"/>
 
     </LinearLayout>
+
+    <Button android:id="@+id/butt_pong_game_dismiss"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
