--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -11,6 +11,18 @@
                 android:visibility="visible"
                 android:touchscreenBlocksFocus="false">
 
+    <TextView android:id="@+id/view_alarm_time_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="It is already,"
+        android:textSize="25dp"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+
     <TextClock android:id="@+id/view_alarm_clock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,21 +30,21 @@
         android:textSize="110sp"
         android:format12Hour="H:mm"
         android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_below="@id/view_alarm_time_hint"
+    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@id/view_alarm_clock">
 
-        <Button android:id="@+id/butt_math_game_dismiss"
+        <Button android:id="@+id/butt_dismiss"
                 android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:layout_alignParentStart="true" android:layout_alignParentLeft="true"
          android:layout_centerInParent="true"
         android:text="@string/button_dismiss"
-        android:layout_weight="1"/>
+            android:textSize="40dp"
+        android:layout_weight="0.8"/>
 
      <Button android:id="@+id/butt_snooze_alarm"
         android:layout_width="wrap_content"
@@ -41,17 +53,8 @@
         android:layout_alignTop="@+id/butt_dismiss_alarm"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_weight="1"/>
+        android:layout_weight="0.2"/>
 
     </LinearLayout>
-
-    <Button android:id="@+id/butt_pong_game_dismiss"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
