--- a/app/src/main/res/layout/activity_math_game.xml
+++ b/app/src/main/res/layout/activity_math_game.xml
@@ -3,80 +3,76 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingStart="20dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:paddingRight="20dp">
 
-    >
 
-
-    <TextView
+    <TextView android:id="@+id/game_text_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Score"
-        android:id="@+id/game_text_score"
+        android:text="@string/game_score"
+        android:textSize="50dp"
+        android:textAllCaps="true"
+        android:textStyle="bold"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_centerHorizontal="true" />
 
-    <TextView
+    <TextView android:id="@+id/game_text_numCorrect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Correct/Total"
-        android:id="@+id/game_text_numCorrect"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/game_text_operandB"
-        android:layout_alignEnd="@+id/game_text_operandB"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="OperandA"
-        android:id="@+id/game_text_operandA"
+        android:textSize="30dp"
         android:layout_below="@+id/game_text_score"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="101dp"/>
+        android:layout_centerHorizontal="true" />
 
-    <TextView
+    <TextView android:id="@+id/game_text_operator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Operator"
-        android:id="@+id/game_text_operator"
-        android:layout_alignTop="@+id/game_text_operandA"
+        android:text="+"
+        android:textSize="75dp"
+        android:layout_below="@id/game_text_numCorrect"
         android:layout_centerHorizontal="true"/>
 
-    <TextView
+    <TextView android:id="@+id/game_text_operandA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="OperandB"
-        android:id="@+id/game_text_operandB"
-        android:layout_alignTop="@+id/game_text_operator"
+        android:text="A"
+        android:textSize="70dp"
+        android:layout_alignTop="@id/game_text_operator"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView android:id="@+id/game_text_operandB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="B"
+        android:textSize="70dp"
+        android:layout_alignTop="@id/game_text_operator"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
-    <EditText
+    <EditText android:id="@+id/game_editText_inputAnswer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/game_editText_inputAnswer"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/game_text_operator"
-        android:layout_toStartOf="@+id/game_text_operator"
-        android:hint="Enter answer here"
+        android:hint="@string/game_empty_answer"
         android:gravity="center"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-    <Button
+    <Button android:id="@+id/game_button_submit"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="Submit Answer"
-        android:id="@+id/game_button_submit"
-        android:layout_alignTop="@+id/game_editText_inputAnswer"
-        android:layout_toRightOf="@+id/game_editText_inputAnswer"
-        android:layout_toEndOf="@+id/game_editText_inputAnswer"/>
+        android:layout_below="@+id/game_editText_inputAnswer"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
