--- a/app/src/main/res/menu/menu_main_alarm.xml
+++ b/app/src/main/res/menu/menu_main_alarm.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="@string/button_done"
-        android:id="@+id/menu_done"
-        app:showAsAction="always" />
+    <item android:title="+"
+        android:id="@+id/menu_plus"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_add"/>
 
 </menu>
