--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,7 +18,7 @@
     <string-array name="game_types">
         <item name="Disabled">Disabled</item>
         <item name="MathGame">Math Game</item>
-        <item name="PongGame">Pong Game</item>
+        <item name="PongGame">Brick Breaker Game (STILL IN DEV)</item>
     </string-array>
     <string-array name="game_types_values">
         <item>0</item>
