--- a/app/src/main/res/layout/activity_math_game.xml
+++ b/app/src/main/res/layout/activity_math_game.xml
@@ -3,76 +3,80 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingStart="20dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:paddingRight="20dp">
+
+    >
 
 
-    <TextView android:id="@+id/game_text_score"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/game_score"
-        android:textSize="50dp"
-        android:textAllCaps="true"
-        android:textStyle="bold"
+        android:text="Score"
+        android:id="@+id/game_text_score"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
-    <TextView android:id="@+id/game_text_numCorrect"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Correct/Total"
-        android:textSize="30dp"
-        android:layout_below="@+id/game_text_score"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/game_text_numCorrect"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/game_text_operandB"
+        android:layout_alignEnd="@+id/game_text_operandB"/>
 
-    <TextView android:id="@+id/game_text_operator"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="+"
-        android:textSize="75dp"
-        android:layout_below="@id/game_text_numCorrect"
+        android:text="OperandA"
+        android:id="@+id/game_text_operandA"
+        android:layout_below="@+id/game_text_score"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="101dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Operator"
+        android:id="@+id/game_text_operator"
+        android:layout_alignTop="@+id/game_text_operandA"
         android:layout_centerHorizontal="true"/>
 
-    <TextView android:id="@+id/game_text_operandA"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="A"
-        android:textSize="70dp"
-        android:layout_alignTop="@id/game_text_operator"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView android:id="@+id/game_text_operandB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="B"
-        android:textSize="70dp"
-        android:layout_alignTop="@id/game_text_operator"
+        android:text="OperandB"
+        android:id="@+id/game_text_operandB"
+        android:layout_alignTop="@+id/game_text_operator"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
-    <EditText android:id="@+id/game_editText_inputAnswer"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/game_empty_answer"
-        android:gravity="center"
-        android:inputType="number"
+        android:id="@+id/game_editText_inputAnswer"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/game_text_operator"
+        android:layout_toStartOf="@+id/game_text_operator"
+        android:hint="Enter answer here"
+        android:gravity="center"
+        android:inputType="numberSigned"/>
 
-    <Button android:id="@+id/game_button_submit"
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:text="Submit Answer"
-        android:layout_below="@+id/game_editText_inputAnswer"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/game_button_submit"
+        android:layout_alignTop="@+id/game_editText_inputAnswer"
+        android:layout_toRightOf="@+id/game_editText_inputAnswer"
+        android:layout_toEndOf="@+id/game_editText_inputAnswer"/>
 
 </RelativeLayout>
