--- a/app/src/main/res/xml/alarm_preferences.xml
+++ b/app/src/main/res/xml/alarm_preferences.xml
@@ -44,6 +44,13 @@
             android:summary="%s"
             android:defaultValue="0"/>
 
+    <ListPreference android:key="preference_game_mathdifficulty"
+                    android:title="Math Difficulty"
+                    android:entries="@array/game_mathdifficulty"
+                    android:entryValues="@array/game_mathdifficulty_values"
+                    android:summary="%s"
+                    android:defaultValue="1" />
+
         <ListPreference android:key="preference_game_mathqns"
             android:title="Math Questions"
             android:entries="@array/game_mathqns"
