--- a/app/src/main/res/menu/menu_main_alarm.xml
+++ b/app/src/main/res/menu/menu_main_alarm.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="+"
-        android:id="@+id/menu_plus"
+    <item android:id="@+id/menu_plus"
+        android:title="+"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_add"/>
+
+    <item android:id="@+id/menu_settings"
+        android:title="Settings"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_settings"/>
 
 </menu>
