--- a/app/src/main/res/layout/activity_main_alarm.xml
+++ b/app/src/main/res/layout/activity_main_alarm.xml
@@ -10,9 +10,14 @@
     android:orientation="vertical"
     tools:context="com.kludge.wakemeup.MainAlarm">
 
+    <Button android:id="@+id/button_gcm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <ListView android:id="@+id/list_alarms"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_below="@id/button_gcm"/>
 
 </RelativeLayout>
 
