--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -32,10 +32,19 @@
         android:textStyle="bold"
         android:layout_below="@id/view_alarm_time_hint"
     />
+
+    <TextView android:id="@+id/view_user_score"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:layout_below="@id/view_alarm_clock"
+        android:text="SCORE_ERROR"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_below="@id/view_alarm_clock">
+        android:layout_below="@id/view_user_score">
 
         <Button android:id="@+id/butt_dismiss"
                 android:layout_height="match_parent"
