--- a/app/src/main/res/layout/activity_register_gcm.xml
+++ b/app/src/main/res/layout/activity_register_gcm.xml
@@ -41,4 +41,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/requestTargetIdButton"
         android:text="SEND REQUEST TO TARGET ID"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start P2P Messaging"
+        android:id="@+id/buttonP2PMessaging"/>
 </LinearLayout>
