--- a/app/src/main/res/layout/fragment_messaging.xml
+++ b/app/src/main/res/layout/fragment_messaging.xml
@@ -5,8 +5,8 @@
               android:orientation="vertical"
               android:weightSum="1">
 
-    <TextView
-        android:id="@+id/P2PMessageTextView"
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.30"
