--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -78,7 +78,8 @@
         android:id="@+id/fragment_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linear_layout">
+        android:layout_below="@id/linear_layout"
+        android:layout_weight="0.4">
     </FrameLayout>
 
 </RelativeLayout>
