--- a/app/src/main/res/layout/activity_alarm_wake.xml
+++ b/app/src/main/res/layout/activity_alarm_wake.xml
@@ -74,12 +74,10 @@
 
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <Button
+        android:id="@+id/startP2PMessagingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linear_layout"
-        android:layout_weight="0.4">
-    </FrameLayout>
+        android:layout_below="@id/linear_layout"/>
 
 </RelativeLayout>
