--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -27,15 +27,10 @@
         android:layout_alignParentRight="true"/>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="Socialize!"
         android:id="@+id/socializeButton"
-        android:layout_alignBottom="@+id/view_alarm_time"
-        android:layout_toLeftOf="@+id/view_alarm_on_state"
-        android:layout_toStartOf="@+id/view_alarm_on_state"
-        android:layout_marginRight="40dp"
-        android:layout_marginEnd="40dp"/>
+        android:layout_toLeftOf="@+id/view_alarm_on_state" />
 
 </RelativeLayout>
