--- a/app/src/main/res/layout/activity_request_gcm.xml
+++ b/app/src/main/res/layout/activity_request_gcm.xml
@@ -4,23 +4,16 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <EditText
+    <TextView android:id="@+id/view_requestinstruct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/targetIdEditText"
-        android:hint="Enter Target User ID"/>
+        android:text="@string/request_instruction"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/requestTargetIdButton"
-        android:text="SEND REQUEST TO TARGET ID"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start P2P Messaging"
-        android:id="@+id/buttonP2PMessaging"/>
-
+    <ListView android:id="@+id/view_requestlist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
